Add US English locale support and tests across all message source types, enhance fallback logic.