@@ -1,5 +1,6 @@
 package info.md7.g11n4j.core.i18n;
 
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -17,8 +18,7 @@ public class MessageContext {
         context.put(key, value);
     }
 
-    public Map<String, String> getContextMap() {
-        return Map.copyOf(context);
+    public Map<String, String> getContextMapView() {
+        return Collections.unmodifiableMap(context);
     }
 }
-
